<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context="com.github.wahyuadepratama.absensi.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_above="@+id/linearLayout"
            android:contentDescription="TODO"
            android:padding="30dp"
            app:srcCompat="@drawable/ic_logohmsi" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:orientation="vertical"
        android:padding="50dp">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimaryLittleDark"
            android:hint="@string/nim"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorAccentDark" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimaryLittleDark"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorAccentDark" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/login"
            android:textColor="#FFF" />

        <!--<TextView-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textColor="@color/colorPrimaryDark"-->
        <!--android:fontFamily="cursive"-->
        <!--android:text="OR"-->
        <!--android:layout_gravity="center"/>-->

        <!--<Button-->
        <!--android:id="@+id/btnRegister"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:background="@color/colorPrimaryDark"-->
        <!--android:text="REGISTER"-->
        <!--android:textColor="#FFF" />-->
    </LinearLayout>

</RelativeLayout>